gccida/c3/print_reg
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/print_reg/src/i386.c:6171:16: error: use of undeclared identifier 'off_694CF3'
fprintf( file, off_694CF3, ( unsigned int)( rtint - 29)); 
               ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/print_reg/src/obj/i386.o] Error 1
